test display info

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 build-Account-Desktop_Qt_5_11_0_MinGW_32bit-Debug/
 
 Compte\.pro\.user
+
+build-Account-Desktop_Qt_5_11_1_MinGW_32bit-Debug/debug/
+
+build-Account-Desktop_Qt_5_11_1_MinGW_32bit-Debug/
