--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Compte\.pro\.user
 build-Account-Desktop_Qt_5_11_1_MinGW_32bit-Debug/debug/
 
 build-Account-Desktop_Qt_5_11_1_MinGW_32bit-Debug/
+
+build-Account-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/
+
+build-Account-Desktop_Qt_5_11_2_MinGW_32bit-Debug/
