--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ build-Account-Desktop_Qt_5_11_1_MinGW_32bit-Debug/
 build-Account-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/
 
 build-Account-Desktop_Qt_5_11_2_MinGW_32bit-Debug/
+
+build-Account-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/
