--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ build-Account-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/
 build-Account-Desktop_Qt_5_11_2_MinGW_32bit-Debug/
 
 build-Account-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/
+
+build-Account-Desktop_Qt_5_12_0_MinGW_64_bit-Release/
