--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ build-Account-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/
 build-Account-Desktop_Qt_5_12_0_MinGW_64_bit-Release/
 
 *.user
+
+Account\.pro\.user\.4\.9-pre1
